2013-09-17  Filip Pizlo  <fpizlo@apple.com>

        DFG should support Int52 for local variables
        https://bugs.webkit.org/show_bug.cgi?id=121064

        Reviewed by Oliver Hunt.

        * Scripts/run-jsc-stress-tests:

2013-09-17  Alex Christensen  <alex.christensen@flexsim.com>

        Added back and forward buttons to WinLauncher.
        https://bugs.webkit.org/show_bug.cgi?id=121212

        Reviewed by Brent Fulgham.

        * WinLauncher/WinLauncher.cpp:
        (resizeSubViews):
        Move new back and forward buttons to correct positions before URL bar.
        (dllLauncherEntryPoint): 
        Store the default button window procedure and replace with my button procedures.
        (EditProc): Updated style and renamed from MyEditProc.
        (BackButtonProc): Added.
        (ForwardButtonProc): Added.

2013-09-17  Michael Saboff  <msaboff@apple.com>

        Unreviewed typo fix after r155999

        Changed en_US.UTB-8 to en_US.UTF-8

        * Scripts/run-javascriptcore-tests:

2013-09-17  Michael Saboff  <msaboff@apple.com>

        run-jsc-stress-tests fails with ruby version 2
        https://bugs.webkit.org/show_bug.cgi?id=121521

        Reviewed by Jessie Berlin.

        Explicitly set LANG to en_US.UTB-8 before starting run-jsc-stress-tests.

        * Scripts/run-javascriptcore-tests:

2013-09-17  Brent Fulgham  <bfulgham@apple.com>

        [Windows] Unreviewed build fix after r155963.

        * DumpRenderTree/win/TestRunnerWin.cpp:
        (TestRunner::evaluateScriptInIsolatedWorld): Pass nullptr rather than 0.

2013-09-17  Anders Carlsson  <andersca@apple.com>

        Fix a typo.

        * TestWebKitAPI/Tests/WTF/HashMap.cpp:
        (TestWebKitAPI::TEST):

2013-09-16  Anders Carlsson  <andersca@apple.com>

        HashMap should work with move-only keys
        https://bugs.webkit.org/show_bug.cgi?id=121310

        Reviewed by Darin Adler.

        * TestWebKitAPI/Tests/WTF/HashMap.cpp:
        (TestWebKitAPI::TEST):